# haptx_interfaces

./: README.md
haptx_interfaces/: CMakeLists.txt  package.xml
haptx_interfaces/msg/: BiotacNormalized.msg  FingerBrakeState.msg  FingerBreakState.msg  FullHandState.msg  HaptxState.msg  TactorGroupState.msg  TactorState.msg
haptx_interfaces/srv/: SetProfile.srv
